[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dbx-hf-loader"
version = "0.1.0"
description = "Utilities to load Hugging Face models, manage caches on Databricks, and serve via MLflow"
readme = "README.md"
authors = [{ name = "Will Smith" }]
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
dbx-hf = "dbx_hf_loader.cli:main"
